update projects to latest .NET standards

--- a/Priority Queue/Priority Queue.csproj
+++ b/Priority Queue/Priority Queue.csproj
@@ -85,6 +85,7 @@
     <Compile Include="SimplePriorityQueue.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Priority Queue.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
